measure PIN read timing

--- a/snippets/timing/Makefile
+++ b/snippets/timing/Makefile
@@ -4,4 +4,4 @@ OBJS= \
 	CRecorder.o \
 
 main: $(OBJS) main.cpp
-	$(CXX) main.cpp $(OBJS) -o timing.bin -lrt
+	$(CXX) main.cpp $(OBJS) -o timing.bin -lbcm2835 -lrt
