--- a/snippets/timing/Makefile
+++ b/snippets/timing/Makefile
@@ -3,5 +3,10 @@
 OBJS= \
 	CRecorder.o \
 
-main: $(OBJS) main.cpp
-	$(CXX) main.cpp $(OBJS) -o timing.bin -lbcm2835 -lrt
+all: timing timingw
+
+timing: $(OBJS) main.cpp
+	$(CXX) main.cpp $(OBJS) -o timing -lbcm2835 -lrt
+
+timingw: $(OBJS) main.cpp
+	$(CXX) -DWIRING_PI main.cpp $(OBJS) -o timingw -lwiringPi
